gcc/testsuite/gcc.dg/pr14963.c
X Y(Z); /* { dg-error "" "error before" } */
